deployment/k8s-service/speech-to-text-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xstack-speech-to-text-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xstack-speech-to-text
  template:
    metadata:
      labels:
        app: xstack-speech-to-text
    spec:
      containers:
        - name: xstack-speech-to-text
          image: xstack-speech-to-text:v1

---
apiVersion: v1
kind: Service
metadata:
  name: xstack-speech-to-text-srv
spec:
  type: LoadBalancer
  selector:
    app: xstack-speech-to-text
