deployment/k8s-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xstack-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "*.x-stack.xyz"
      secretName: xstack-tls
  rules:
    - host: www.x-stack.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xstack-frontend-srv
                port:
                  number: 3000
    - host: api.x-stack.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xstack-publisher-srv
                port:
                  number: 8080
